--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python: 2.7
 sudo: false
+services:
+  - xvfb
 cache:
   directories:
   - $HOME/.pylint.d
@@ -26,8 +28,6 @@ install:
 - bin/buildout annotate
 - bin/buildout
 before_script:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
 - firefox -v
 script:
 - bin/code-analysis
