--- a/webpack/package.json
+++ b/webpack/package.json
@@ -4,6 +4,7 @@
   "main": "app/lazysizes.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack -p",
+    "release": "yarn build",
     "debug": "NODE_ENV=debug ./node_modules/.bin/webpack --watch",
     "watch": "./node_modules/.bin/webpack -p --watch",
     "test": "NODE_ENV=testing ./node_modules/.bin/karma start --single-run"
